--- a/app/src/main/res/layout/clone_view.xml
+++ b/app/src/main/res/layout/clone_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:tools="http://schemas.android.com/tools">
-
+<layout>
+    
     <data>
 
         <import type="android.view.View" />
@@ -118,4 +118,5 @@
             app:layout_constraintEnd_toStartOf="@id/cloneViewCloneButton"
             app:layout_constraintTop_toBottomOf="@id/cloneViewForm" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    
 </layout>
